tests added and concretizer refactored