@@ -88,27 +88,52 @@ public class SmtEncoderTest {
 
     SmtEncoder smtEncoder = new SmtEncoder(maxDurations, spec, freeVariables);
     SConstraint output = smtEncoder.getConstrain();
-    testForBigN(output.getGlobalConstraints());
+    Set<SExpr> constraints = output.getGlobalConstraints();
 
     System.out.println(output);
+    testWithStatements(constraints,
+        "(implies (> n_2 4) (= A_2_4 A_2_0))",
 
+        "(implies (> n_2 3) (= A_2_3 A_2_-1))",
+        "(implies (= n_1 1) (= A_2_-1 A_1_0))",
+
+        "(implies (> n_2 2) (= A_2_2 A_2_-2))",
+        "(implies (= n_1 1) (= A_2_-2 A_1_-1))",
+        "(implies (= n_0 3) (= A_1_-1 A_0_2))",
+
+        "(implies (> n_2 1) (= A_2_1 A_2_-3))",
+        "(implies (= n_1 1) (= A_2_-3 A_1_-2))",
+        "(implies (= n_0 3) (= A_1_-2 A_0_1))",
+
+        "(implies (> n_2 0) (= A_2_0 A_2_-4))",
+        "(implies (= n_1 1) (= A_2_-4 A_1_-3))",
+        "(implies (= n_0 3) (= A_1_-3 A_0_0))");
+
+    testWithStatements(constraints,
+        "(implies (> n_2 4) (= A_2_4 A_2_0))",
+
+        "(implies (> n_2 3) (= A_2_3 A_2_-1))",
+        "(implies (= n_1 2) (= A_2_-1 A_1_1))",
+
+        "(implies (> n_2 2) (= A_2_2 A_2_-2))",
+        "(implies (= n_1 2) (= A_2_-2 A_1_0))",
+
+        "(implies (> n_2 1) (= A_2_1 A_2_-3))",
+        "(implies (= n_1 2) (= A_2_-3 A_1_-1))",
+        "(implies (= n_0 3) (= A_1_-1 A_0_2))",
+
+
+        "(implies (> n_2 0) (= A_2_0 A_2_-4))",
+        "(implies (= n_1 2) (= A_2_-4 A_1_-2))",
+        "(implies (= n_0 3) (= A_1_-2 A_0_1))"
+        );
   }
 
-  private void testForBigN(Set<SExpr> constraints) {
-    List<SExpr> statements = Stream.of(
-        "(implies (> n_2 4) (= A_2_4 A_2_0))",
-        "(implies (> n_2 3) (= A_2_3 A_2_-1))",
-          "(implies (= n_1 1) (= A_2_-1 A_1_0))",
-        "(implies (> n_2 2) (= A_2_2 A_2_-2))",
-          "(implies (= n_1 1) (= A_2_-2 A_1_-1))",
-            "(implies (= n_0 3) (= A_1_-1 A_0_2))",
-        "(implies (> n_2 1) (= A_2_1 A_2_-3))",
-          "(implies (= n_1 1) (= A_2_-3 A_1_-2))",
-            "(implies (= n_0 3) (= A_1_-2 A_0_1))",
-        "(implies (> n_2 0) (= A_2_0 A_2_-4))",
-          "(implies (= n_1 1) (= A_2_-4 A_1_-3))",
-            "(implies (= n_0 3) (= A_1_-3 A_0_0))"
-    ).map(SExpr::fromString).collect(Collectors.toList());
+  private void testWithStatements(Set<SExpr> constraints,String ... s) {
+    List<SExpr> statements = Arrays.stream(s).map(SExpr::fromString)
+        .collect
+        (Collectors
+        .toList());
 
     List<SExpr> missingStatements = statements.stream().filter
         (statement
@@ -119,7 +144,6 @@ public class SmtEncoderTest {
 
     System.out.println(constraints);
     assertEquals("no statements should be missing", new ArrayList<SExpr>(), missingStatements);
-
-
   }
+
 }
